# PatientManagementRust

./: Cargo.toml
src/: aggregate_root.rs  domain_error.rs  encounter_aggregate.rs  encounter_event.rs  lib.rs  tests.rs
